# src/main/java/fr/lepgu/palaisdivin/backend/review/adapters/rest/AuthorReviewRestaurantRef.java
@@ -1,0 +1,5 @@
+package fr.lepgu.palaisdivin.backend.review.adapters.rest;
+
+import java.util.UUID;
+
+public record AuthorReviewRestaurantRef(UUID id, String name, String address) {}
